Fix: game style shifts by .dice-hand-info in mobile

--- a/css/game.css
+++ b/css/game.css
@@ -543,11 +543,11 @@
     padding: 10px;
   }
   #player-container {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
     gap: 0;
   }
   .player-container-left {
-    padding: 5px;
     flex-direction: row;
   }
   .player-container-left-button {
@@ -556,6 +556,8 @@
   .player-container-center-and-right {
     grid-template-columns: 3fr 2fr;
     gap: 0;
+    flex: 1;
+    min-height: 0;
   }
   .player-container-center,
   .player-container-right {
@@ -572,6 +574,11 @@
     height: 40px;
     font-size: 1.5rem;
   }
+  .dice-hand-info {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
   #dice-hand-info-title {
     font-size: 1rem;
   }
@@ -582,6 +589,10 @@
   #dice-hand-info-effect-value {
     font-size: 0.7rem;
     margin: 5px 0;
+  }
+  .dice-buttons {
+    height: auto;
+    margin-bottom: 10px;
   }
   .dice-buttons button {
     font-size: 0.8rem;
